--- a/package.json
+++ b/package.json
@@ -31,7 +31,7 @@
   },
   "scripts": {
     "build": "babel src -d lib",
-    "test": "echo \"Error: no test specified\" && exit 1"
+    "test": "karma start --single-run --browsers PhantomJS"
   },
   "author": "BPH",
   "license": "ISC"
